# aoc-2023

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  index.html  make_pycco_pages.py  mypy.ini  noxfile.py  pyproject.toml  serve_pycco.sh
.github/workflows/: main.yml
day_template/: __init__.py  main.py
src/: utils.html  utils.py
src/day1/: __init__.py  main.html  main.py
src/day10/: main.py
src/day11/: main.py
src/day2/: main.html  main.py
src/day3/: main.html  main.py
src/day4/: main.html  main.py
src/day5/: main.html  main.py
src/day6/: main.py
src/day7/: main.py
src/day8/: main.py
src/day9/: main.py
