[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aoc_2023"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pycco = "^0.6.0"
mypy = "^1.7.1"
black = "^23.11.0"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"
flake8-import-order = "^0.18.2"
nox = "^2023.4.22"
pre-commit = "^3.5.0"
flake8-annotations = "^3.0.1"
xdoctest = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
